--- a/applications/luci-mentohust/luasrc/view/mentohust.htm
+++ b/applications/luci-mentohust/luasrc/view/mentohust.htm
@@ -26,6 +26,7 @@ write(translate("A Ruijie and Cernet supplicant from HustMoon Studio. Homepage: 
 <div><p>
 <input class="cbi-button cbi-input-apply" type="button" value="<%:Enable%>" onclick="enable_disable('enable')" />
 <input class="cbi-button cbi-input-reset" type="button" value="<%:Disable%>" onclick="enable_disable('disable')" />
+<%:Enable/Disable button enables/disables boot-time starting too.%>
 </p></div>
 <p>
 <% write(translate("This is the output of mentohust. This screen refreshes itself every 5 seconds. You can disable the refreshing by clicking the <em>Auto Refresh on</em> button.")) %>
