--- a/applications/luci-goagent/luasrc/view/goagent.htm
+++ b/applications/luci-goagent/luasrc/view/goagent.htm
@@ -1,5 +1,10 @@
 <%+header%>
-<h2><%:goagent running status%></h2>
+<h2><a id="content" name="content"><%:GoAgent Running Status%></a></h2>
+<div class="cbi-map-descr">
+<%
+write(translate("A proxy program based on GAE. Homepage: <a href='https://code.google.com/p/goagent/'>https://code.google.com/p/goagent/</a>."))
+%>
+</div>
 <script type="text/javascript">//<![CDATA[
 	update_textarea = function(str)
 	{
@@ -21,6 +26,7 @@
 <div><p>
 <input class="cbi-button cbi-input-apply" type="button" value="<%:Enable%>" onclick="enable_disable('enable')" />
 <input class="cbi-button cbi-input-reset" type="button" value="<%:Disable%>" onclick="enable_disable('disable')" />
+<%:Enable/Disable button enables/disables boot-time starting too.%>
 </p></div>
 <p>
 <% write(translate("This is the output of goagent. This screen refreshes itself every 5 seconds. You can disable the refreshing by clicking the <em>Auto Refresh on</em> button.")) %>
@@ -28,10 +34,7 @@
 <% write(translate("You can also monitor the screen in a terminal using command <em>screen -x goagent</em>. Then press <em>Ctrl+a</em>, <em>Ctrl+d</em> to exit.")) %>
 </p>
 <p>
-<% write(translate("Please fill your user name in the <em>proxy.ini</em> file on <em>config</em> page, then press <em>Enable</em> button to start goagent.")) %> (<a href='<%=luci.dispatcher.build_url("admin", "services", "goagent", "config")%>'><%:config page%></a>). <%:The starting could take a minute, so wait patiently.%>
-</p>
-<p>
-<% write(translate("<a href='https://code.google.com/p/goagent/'>Go to goagent homepage</a> for further information.")) %>
+<% write(translate("Please fill your user name in the <em>proxy.ini</em> file on <em>config</em> page, then press <em>Enable</em> button to start goagent.")) %> (<a href='<%=luci.dispatcher.build_url("admin", "services", "goagent", "config")%>'><%:config page%></a>)<% write(translate(". ")) %><%:The starting could take a minute, so wait patiently.%>
 </p>
 <div>
 <textarea readonly="readonly" wrap="off" rows="25" style="width: 100%;" id="goagent_screen"></textarea>
